src/pages/templates/styling/post.scss
$primary-color: #262626;
$secondary-color: #362066;
$highlighted: #FF0266;
$highlightedonpurple: #FF0266;
$white: #fff;
$title-font: 'Raleway', sans-serif;
$p-font:  "Roboto", "Helvetica", "Arial", sans-serif;

.blog-page-container {
  background-color:#eee;
  background-repeat: repeat;
  background-size: auto;
  background-color: transparent;
  background-position: -112.787px 215.7px;
  background-image: url(../../../images/prismLight.png);
  height: 100%;
}

.blog-page-warning {
  margin: auto;
  width: fit-content;
  padding: 50px;
  border: 1px #B00020 solid;
  margin-top: 25px;
  margin-bottom: 25px;
}

.blog-page-header {
  height: 75vh;
  position:relative;
  background-color:#262626;
}

$blur: 30px;

.blog-page-header Img {
  filter: blur($blur);
  -webkit-filter: blur($blur);
  height:100% !important;
  position:relative;
}

.blog-page-header-subtitle {
  display:flex;
  flex-direction: column;
  justify-content: left;
}

.blog-page-header-subtitle p {
  margin-right:20px;
  margin-top:0;
  font-size:18pt;
  padding:0;
}

.blog-page-date {
  width:100%;
}

.blog-page-date p {
  width: max-content;
  margin: auto;
  color: #262626;
}

.blog-page-contents {
  z-index:2;
  width:100%;
  margin:0;
}

.blog-post-container__inner {
  clear: both;
  display: table;
  text-align: center;
  margin:auto;
  background-color:inherit;
  letter-spacing: .5pt !important;
  -webkit-font-smoothing: antialiased;
  height:auto;
  max-width: 1000px;
  padding:150px 50px;
  text-align:left;

  h4 {
    color: #B00020;
    font-size: 14pt;
    padding: 20px;
    border: 1px #B00020 solid;
    border-radius: 5px;
    margin-bottom:25px;
  }
  h3:first-child:first-letter  {
    font-family: Georgia;
    font-size: 25px;
  }
  li {
    text-align:left;
    padding-left: 10px;
  }

  .blog-page-title {
    clear:left;
  }

  .blog-page-image {
    width: 50%;
    float: left;
    padding-right: 15px;
    padding-top: 15px;
    div {
      p {
        font-size: 12pt;
        font-family: "Roboto", "Helvetica", "Arial", sans-serif;
        font-style: italic;
        margin:0;
        .gatsby-resp-image-wrapper {
          margin-left:0 !important;
          margin-right:0 !important;
        } 
        img {
          max-width:100%;
        }
      }
    }
  }
}

.image-out-of-line {
  margin:auto;
  width:450px;
  .custom-block-body {
    p {
      display: flex;
      flex-direction:column;
    }

    img {
      width:100%;
      height:auto;
    }
  }
}

.gatsby-resp-iframe-wrapper {
  padding-bottom: 563px !important;
  width: 523px;
  border: 2px solid #262626;
  margin:auto;
  display: block;
  margin-block-start: 1.77em !important;
  margin-block-end: 1.77em !important;
  line-height: 1.67;
  iframe {
    border:unset;
  }
}

.blog-page-contents p, .footnote, .blog-page-contents ul, .blog-page-contents h1, .blog-page-contents h3, .blog-page-contents blockquote, .blog-page-contents h2 {
  color: #262626 !important;
  line-height: 1.67;
  font-weight:300;
  font-size: 14pt;
  font-family:$p-font;
}

.blog-page-contents h1 {
  font-size: 18pt;
  font-weight:800;
}

.blog-page-contents h2 {
  font-size: 16pt;
  font-weight:500;
}

.blog-page-contents h3 {
  font-size: 14pt;
  font-weight:500;
}

.footnote {
  color: #262626 !important;
  text-align:center;
  margin: 10px;
  margin-bottom: 0;
  font-style: italic;
}

.blog-page-header__inner {
  display:flex;
  flex-direction: column;
  position:absolute;
  margin:auto;
  width:100%;
  height:100%;
  top:0;
}

.blog-page-header-text {
  margin:auto;
  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
}

.blog-page-header-text h1 {
  font-size:80px;
}

.blog-page-header-text h2 {
  font-size: 40px;
}

.blog-page-button {
  width: fit-content;
    margin: auto;
    margin: 0 auto;
    border: 1px solid #FF0266;
    border-radius: 5px;
    background-color: transparent;
    color: #FF0266;
    padding: 14px 28px;
    font-size: 18pt;
    cursor: pointer;
    -webkit-transition: 0.3s;
    transition: 0.3s;
    .custom-block-body {
      p {
        margin:0;
        line-height:unset;
        color: #FF0266 !important;
        font-weight: 500 !important;
        a:hover {
          color:#eee !important;
        }
      
      }
    }
}

a {
  color: $highlighted !important;
}

a:hover {
  color: $secondary-color !important;
}

.blog-page-button:hover {
  background-color: $highlighted;
  transition: 0.3s;
  .custom-block-body {
    p {
      color:#eee !important;
    }
  }

}

@media only screen and (max-width: 1024px) {
  .gatsby-resp-iframe-wrapper {
    width: unset;
  }
  
  .blog-page-header-text h1 {
    font-size: 40px;
  }
  .blog-page-header-subtitle p {
    font-size:14pt;
    text-align:center;
  }

  .blog-page-image {
    width: 100% !important;
    div {
      p {
        padding-bottom: 10px;
      }    
    }
  }
  .blog-post-container__inner {
    padding: 100px 20px;
  }
}

